@@ -15,19 +15,23 @@
   </Configurations>
   <DeployTargets />
   <Contents>
+    <File name="./" subtype="Directory" buildaction="Compile" />
     <File name="./src/Camera.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/CameraAbilitiesList.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/CameraFile.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/CameraFilesystem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/CameraList.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/CameraWidget.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Context.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/ErrorCodes.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Object.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Port.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/PortInfo.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/PortInfoList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Detector.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/File.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/TestGphoto2Sharp.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/Camera.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/CameraAbilitiesList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/CameraFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/CameraFilesystem.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/CameraList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/CameraWidget.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/Context.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/ErrorCodes.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/Object.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/Port.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/PortInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Base/PortInfoList.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
