@@ -1,3 +1,11 @@
+2007-02-04  Patrick van Staveren <trick@vanstaveren.us> 
+
+	* libgphoto2-sharp.mdp: Updated MonoDevelop project
+	
+	* src/Base/ErrorCodes.cs: Updated to match newer error code values
+	
+	* src: updated svn:ignore
+
 2007-01-31  Patrick van Staveren  <trick@vanstaveren.us>
 
 	* src/{File,Camera,Detector}.cs: Starting to prototype fully OO
